--- a/classes/Week 4.ipynb
+++ b/classes/Week 4.ipynb
@@ -159,7 +159,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 123,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [
     {
@@ -180,7 +180,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 124,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [
     {
@@ -205,7 +205,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 125,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [
     {
@@ -234,7 +234,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 126,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [
     {
@@ -266,26 +266,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 127,
+   "execution_count": 44,
    "metadata": {},
    "outputs": [],
    "source": [
     "def first_letters(words):\n",
     "    #Replace [] with your code.\n",
-    "    output = []\n",
+    "    output= [word[0] for word in words]\n",
     "    return output"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 128,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[]\n"
+      "['I', 'i', 'a', 't', 'u', 'a', 't', 'a', 's', 'm', 'i', 'p', 'o', 'a', 'g', 'f', 'm', 'b', 'i', 'w', 'o', 'a', 'w']\n"
      ]
     }
    ],
@@ -303,26 +303,38 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 129,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def first_letters_except(words, stopwords):\n",
-    "    #Replace [] with your code.\n",
-    "    output = []\n",
-    "    return output"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 130,
+   "execution_count": 46,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[]\n"
+      "True\n",
+      "False\n"
+     ]
+    }
+   ],
+   "source": [
+    "stopwords = ['the','and','to','of','for']\n",
+    "print(\"the\" in stopwords)\n",
+    "print(\"prediction\" in stopwords)\n",
+    "def first_letters_except(words, stopwords):\n",
+    "    #Replace [] with your code.\n",
+    "    output = [word[0] if word not in stopwords else None for word in words]\n",
+    "    return output"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 47,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['A', 'p', 'p', None, 's', 'p', None, 'F', 'p', None, 'm', 'p', 's']\n"
      ]
     }
    ],
@@ -331,6 +343,40 @@
     "stopwords = ['the', 'and', 'to', 'of', 'for']\n",
     "\n",
     "initials = first_letters_except(sometitle.split(), stopwords)\n",
+    "print(initials)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 48,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def first_letters_except_loop(words,stopwrds):\n",
+    "    output=[]\n",
+    "    for word in words:\n",
+    "        if word in stopwords:\n",
+    "            output.append(None)\n",
+    "        else:\n",
+    "            output.append(word[0])\n",
+    "    return output"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 49,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['A', 'p', 'p', None, 's', 'p', None, 'F', 'p', None, 'm', 'p', 's']\n"
+     ]
+    }
+   ],
+   "source": [
+    "initials = first_letters_except_loop(sometitle.split(), stopwords)\n",
     "print(initials)"
    ]
   },
@@ -350,7 +396,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 131,
+   "execution_count": 50,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -359,18 +405,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 132,
+   "execution_count": 51,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "4.428571428571429"
-      ]
-     },
-     "execution_count": 132,
-     "metadata": {},
-     "output_type": "execute_result"
+     "ename": "NameError",
+     "evalue": "name 'words' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[1;32m<ipython-input-51-e80f57d2d764>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m      3\u001b[0m     \u001b[1;32mreturn\u001b[0m \u001b[0mmean\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mlengths\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      4\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 5\u001b[1;33m \u001b[0maverage_length\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mwords\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[1;31mNameError\u001b[0m: name 'words' is not defined"
+     ]
     }
    ],
    "source": [
@@ -378,7 +425,7 @@
     "    lengths = [len(word) for word in words]\n",
     "    return mean(lengths)\n",
     "    \n",
-    "average_length(mystring.split())"
+    "average_length(words)"
    ]
   },
   {
@@ -392,7 +439,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 155,
+   "execution_count": 53,
    "metadata": {},
    "outputs": [
     {
@@ -401,7 +448,7 @@
        "4.428571428571429"
       ]
      },
-     "execution_count": 155,
+     "execution_count": 53,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -417,26 +464,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 157,
+   "execution_count": 54,
    "metadata": {},
    "outputs": [
     {
-     "ename": "TypeError",
-     "evalue": "'bool' object is not callable",
+     "ename": "NameError",
+     "evalue": "name 'print_ret' is not defined",
      "output_type": "error",
      "traceback": [
       "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[1;32m<ipython-input-157-26224e0e95ba>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m      6\u001b[0m         \u001b[1;32mreturn\u001b[0m \u001b[0moutput\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      7\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 8\u001b[1;33m \u001b[0maverage_length3\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34m\"The\"\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;34m\"quick\"\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;34m\"brown\"\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;34m\"fox\"\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;34m\"jumped\"\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;34m\"over\"\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;34m\"the\"\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;34m\"lazy\"\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;34m\"dogs\"\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mprint\u001b[0m\u001b[1;33m=\u001b[0m\u001b[1;32mTrue\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[1;32m<ipython-input-157-26224e0e95ba>\u001b[0m in \u001b[0;36maverage_length3\u001b[1;34m(print, *words)\u001b[0m\n\u001b[0;32m      2\u001b[0m     \u001b[0moutput\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0maverage_length2\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m*\u001b[0m\u001b[0mwords\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      3\u001b[0m     \u001b[1;32mif\u001b[0m \u001b[0mprint\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 4\u001b[1;33m         \u001b[0mprint\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0moutput\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m      5\u001b[0m     \u001b[1;32melse\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      6\u001b[0m         \u001b[1;32mreturn\u001b[0m \u001b[0moutput\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;31mTypeError\u001b[0m: 'bool' object is not callable"
+      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[1;32m<ipython-input-54-452c074530d6>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m      6\u001b[0m         \u001b[1;32mreturn\u001b[0m \u001b[0moutput\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      7\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 8\u001b[1;33m \u001b[0maverage_length3\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34m\"The\"\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;34m\"quick\"\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;34m\"brown\"\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;34m\"fox\"\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;34m\"jumped\"\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;34m\"over\"\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;34m\"the\"\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;34m\"lazy\"\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;34m\"dogs\"\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mprint\u001b[0m\u001b[1;33m=\u001b[0m\u001b[1;32mTrue\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[1;32m<ipython-input-54-452c074530d6>\u001b[0m in \u001b[0;36maverage_length3\u001b[1;34m(print, *words)\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[1;32mdef\u001b[0m \u001b[0maverage_length3\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m*\u001b[0m\u001b[0mwords\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mprint\u001b[0m\u001b[1;33m=\u001b[0m\u001b[1;32mFalse\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      2\u001b[0m     \u001b[0moutput\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0maverage_length2\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m*\u001b[0m\u001b[0mwords\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 3\u001b[1;33m     \u001b[1;32mif\u001b[0m \u001b[0mprint_ret\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m      4\u001b[0m         \u001b[0mprint\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0moutput\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      5\u001b[0m     \u001b[1;32melse\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;31mNameError\u001b[0m: name 'print_ret' is not defined"
      ]
     }
    ],
    "source": [
     "def average_length3(*words, print=False):\n",
     "    output = average_length2(*words)\n",
-    "    if print:\n",
+    "    if print_ret:\n",
     "        print(output)\n",
     "    else:\n",
     "        return output\n",
@@ -718,21 +765,40 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 143,
+   "execution_count": 73,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "SyntaxError",
+     "evalue": "invalid syntax (<ipython-input-73-4b650873dac8>, line 2)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;36m  File \u001b[1;32m\"<ipython-input-73-4b650873dac8>\"\u001b[1;36m, line \u001b[1;32m2\u001b[0m\n\u001b[1;33m    output=word[0] if word not in stopwords else None for word in words\u001b[0m\n\u001b[1;37m                                                        ^\u001b[0m\n\u001b[1;31mSyntaxError\u001b[0m\u001b[1;31m:\u001b[0m invalid syntax\n"
+     ]
+    }
+   ],
    "source": [
-    "def first_letters_except2(words, stopwords):\n",
+    "def first_letters_except(words, stopwords):\n",
+    "    output=word[0] if word not in stopwords else None for word in words\n",
+    "\n",
+    "def first_letters_except2(words, *stopwords):\n",
     "    #Replace [].\n",
-    "    output = []\n",
-    "    return output"
+    "    output = [word[0] if word not in stopwords else None for word in words]\n",
+    "    return output\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 144,
+   "execution_count": 74,
    "metadata": {},
    "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Automatic performance prediction to support parallelization of Fortran programs for massively parallel systems.\n"
+     ]
+    },
     {
      "ename": "TypeError",
      "evalue": "first_letters_except() takes 2 positional arguments but 6 were given",
@@ -740,12 +806,13 @@
      "traceback": [
       "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
       "\u001b[1;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[1;32m<ipython-input-144-d8fbec0e89ca>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[1;32m----> 1\u001b[1;33m \u001b[0minitials\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mfirst_letters_except\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0msometitle\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0msplit\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;34m'the'\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;34m'and'\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;34m'to'\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;34m'of'\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;34m'for'\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m      2\u001b[0m \u001b[0mprint\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0minitials\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;32m<ipython-input-74-8f4a981cab98>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[0mprint\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0msometitle\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 2\u001b[1;33m \u001b[0minitials\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mfirst_letters_except\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0msometitle\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0msplit\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;34m'the'\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;34m'and'\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;34m'to'\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;34m'of'\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;34m'for'\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m      3\u001b[0m \u001b[0mprint\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0minitials\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
       "\u001b[1;31mTypeError\u001b[0m: first_letters_except() takes 2 positional arguments but 6 were given"
      ]
     }
    ],
    "source": [
+    "print(sometitle)\n",
     "initials = first_letters_except(sometitle.split(), 'the', 'and', 'to', 'of', 'for')\n",
     "print(initials)"
    ]
@@ -765,7 +832,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 76,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -827,9 +894,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 77,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "A. Cau, R. Kuiper, and W.-P. de Roever.Formalising Dijkstra's development strategy within Stark's formalism. Proc. 5th. BCS-FACS Refinement Workshop, 1992.\n"
+     ]
+    }
+   ],
    "source": [
     "c = Citation('A. Cau, R. Kuiper, and W.-P. de Roever.',\n",
     "                \"Formalising Dijkstra's development strategy within Stark's formalism. \",\n",
@@ -847,9 +922,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 78,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "A. Cau, R. Kuiper, and W.-P. de Roever.Formalising Dijkstra's development strategy within Stark's formalism. Proc. 5th. BCS-FACS Refinement Workshop, 1992.\n"
+     ]
+    }
+   ],
    "source": [
     "det = {\n",
     "    'author':             'A. Cau, R. Kuiper, and W.-P. de Roever.',\n",
@@ -880,7 +963,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 114,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -897,7 +980,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 117,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -923,13 +1006,47 @@
     "            details['number'] = None\n",
     "        \n",
     "        if 'book_title' not in details:\n",
-    "            details['book_title']\n",
+    "            details['book_title']= None\n",
     "        \n",
     "        if 'date' not in details:\n",
-    "            details['date']\n",
+    "            details['date']= None\n",
     "        \n",
     "        return Citation(**details)\n",
-    "        \n",
+    "    \n",
+    "    @staticmethod\n",
+    "    def from_xml(xml):\n",
+    "        deets = {\n",
+    "        'author': xml.find('author').text,\n",
+    "        'title' : xml.find('title').text,\n",
+    "    }\n",
+    "    \n",
+    "        if xml.find('journal') != None:\n",
+    "            deets['journal'] = xml.find('journal').text\n",
+    "        else:\n",
+    "            deets['journal'] = None\n",
+    "\n",
+    "        if xml.find('volume') != None:\n",
+    "            deets['volume'] = xml.find('volume').text\n",
+    "        else:\n",
+    "            deets['volume'] = None\n",
+    "\n",
+    "        if xml.find('number') != None:\n",
+    "            deets['number'] = xml.find('number').text\n",
+    "        else:\n",
+    "            deets['number'] = None\n",
+    "\n",
+    "        if xml.find('booktitle') != None:\n",
+    "            deets['book_title'] = xml.find('booktitle').text\n",
+    "        else:\n",
+    "            deets['book_title'] = None\n",
+    "\n",
+    "        if xml.find('date') != None:\n",
+    "            deets['date'] = xml.find('date').text\n",
+    "        else:\n",
+    "            deets['date'] = None\n",
+    "\n",
+    "        return Citation.from_dict(deets)\n",
+    "\n",
     "    def names(self):\n",
     "        return self.author.split(',')\n",
     "    \n",
@@ -950,9 +1067,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 118,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      " T. Fahringer, R. Blasko, and H. Zima.  Automatic performance prediction to support parallelization of Fortran programs for massively parallel systems.  In Proceedings of the 1992 ACM International Conference on Supercomputing,  July 1992. \n",
+      " A. D. Kallis and D. Klappholz,  ``Reaching definitions analysis on code containing array references,''  Conf. Rec. of the 4th Workshop on Languages and Compilers for Parallel Computing,  Aug. 1991. \n",
+      " R. Fletcher.  Practical Methods of Optimization.  1987. \n",
+      " Clark, K. L.,  Negation as Failure,  Logic and Data Bases,  1978. \n",
+      " Gent, I. P., & Walsh, T.  Easy problems are sometimes hard.  Artificial Intelligence,  70,  (1994a). \n"
+     ]
+    }
+   ],
    "source": [
     "#import etree\n",
     "import xml.etree.ElementTree as ET\n",
@@ -968,6 +1097,13 @@
     "for c in cites:\n",
     "    c.complete()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
