--- a/homework/Assignment 3.ipynb
+++ b/homework/Assignment 3.ipynb
@@ -40,7 +40,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -70,14 +70,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[{'author': 'T. Fahringer, R. Blasko, and H. Zima.', 'title': 'Automatic performance prediction to support parallelization of Fortran programs for massively parallel systems.', 'journal': None, 'volume': None, 'number': None, 'book_title': 'In Proceedings of the 1992 ACM International Conference on Supercomputing,', 'date': '1992'}, {'author': 'A. D. Kallis and D. Klappholz,', 'title': 'Reaching definitions analysis on code containing array references,', 'journal': None, 'volume': None, 'number': None, 'book_title': 'Conf. Rec. of the 4th Workshop on Languages and Compilers for Parallel Computing,', 'date': '1991'}, {'author': 'R. Fletcher.', 'title': 'Practical Methods of Optimization.', 'journal': None, 'volume': None, 'number': None, 'book_title': None, 'publisher': 'John Wiley &amp; Sons,', 'date': '1987'}, {'author': 'Clark, K. L.', 'title': 'Negation as Failure,', 'journal': None, 'volume': None, 'number': None, 'editor': 'in: H. Gallaire and J. Minker (eds.),', 'book_title': 'Logic and Data Bases,', 'publiser': 'Plenum Press,', 'date': '1978'}, {'author': 'Gent, I. P., &amp; Walsh, T.', 'title': 'Easy problems are sometimes hard.', 'journal': 'Artificial Intelligence,', 'volume': '70', 'number': None, 'pages': '335-345', 'book_title': None, 'date': '1994'}, {'author': 'A. D. Kallis and D. Klappholz,', 'title': 'Reaching definitions analysis on code containing array references,', 'journal': None, 'volume': None, 'number': None, 'book_title': 'Conf. Rec. of the 4th Workshop on Languages and Compilers for Parallel Computing,', 'date': '1991'}, {'author': 'R. Fletcher.', 'title': 'Practical Methods of Optimization.', 'journal': None, 'volume': None, 'number': None, 'book_title': None, 'publisher': 'John Wiley &amp; Sons,', 'date': '1987'}, {'author': 'Clark, K. L.', 'title': 'Negation as Failure,', 'journal': None, 'volume': None, 'number': None, 'editor': 'in: H. Gallaire and J. Minker (eds.),', 'book_title': 'Logic and Data Bases,', 'publiser': 'Plenum Press,', 'date': '1978'}, {'author': 'Gent, I. P., &amp; Walsh, T.', 'title': 'Easy problems are sometimes hard.', 'journal': 'Artificial Intelligence,', 'volume': '70', 'number': None, 'pages': '335-345', 'book_title': None, 'date': '1994'}, {'author': 'A. D. Kallis and D. Klappholz,', 'title': 'Reaching definitions analysis on code containing array references,', 'journal': None, 'volume': None, 'number': None, 'book_title': 'Conf. Rec. of the 4th Workshop on Languages and Compilers for Parallel Computing,', 'date': '1991'}, {'author': 'R. Fletcher.', 'title': 'Practical Methods of Optimization.', 'journal': None, 'volume': None, 'number': None, 'book_title': None, 'publisher': 'John Wiley &amp; Sons,', 'date': '1987'}, {'author': 'Clark, K. L.', 'title': 'Negation as Failure,', 'journal': None, 'volume': None, 'number': None, 'editor': 'in: H. Gallaire and J. Minker (eds.),', 'book_title': 'Logic and Data Bases,', 'publiser': 'Plenum Press,', 'date': '1978'}, {'author': 'Gent, I. P., &amp; Walsh, T.', 'title': 'Easy problems are sometimes hard.', 'journal': 'Artificial Intelligence,', 'volume': '70', 'number': None, 'pages': '335-345', 'book_title': None, 'date': '1994'}, {'author': 'A. D. Kallis and D. Klappholz,', 'title': 'Reaching definitions analysis on code containing array references,', 'journal': None, 'volume': None, 'number': None, 'book_title': 'Conf. Rec. of the 4th Workshop on Languages and Compilers for Parallel Computing,', 'date': '1991'}, {'author': 'R. Fletcher.', 'title': 'Practical Methods of Optimization.', 'journal': None, 'volume': None, 'number': None, 'book_title': None, 'publisher': 'John Wiley &amp; Sons,', 'date': '1987'}, {'author': 'Clark, K. L.', 'title': 'Negation as Failure,', 'journal': None, 'volume': None, 'number': None, 'editor': 'in: H. Gallaire and J. Minker (eds.),', 'book_title': 'Logic and Data Bases,', 'publiser': 'Plenum Press,', 'date': '1978'}, {'author': 'Gent, I. P., &amp; Walsh, T.', 'title': 'Easy problems are sometimes hard.', 'journal': 'Artificial Intelligence,', 'volume': '70', 'number': None, 'pages': '335-345', 'book_title': None, 'date': '1994'}, {'author': 'A. D. Kallis and D. Klappholz,', 'title': 'Reaching definitions analysis on code containing array references,', 'journal': None, 'volume': None, 'number': None, 'book_title': 'Conf. Rec. of the 4th Workshop on Languages and Compilers for Parallel Computing,', 'date': '1991'}, {'author': 'R. Fletcher.', 'title': 'Practical Methods of Optimization.', 'journal': None, 'volume': None, 'number': None, 'book_title': None, 'publisher': 'John Wiley &amp; Sons,', 'date': '1987'}, {'author': 'Clark, K. L.', 'title': 'Negation as Failure,', 'journal': None, 'volume': None, 'number': None, 'editor': 'in: H. Gallaire and J. Minker (eds.),', 'book_title': 'Logic and Data Bases,', 'publiser': 'Plenum Press,', 'date': '1978'}, {'author': 'Gent, I. P., &amp; Walsh, T.', 'title': 'Easy problems are sometimes hard.', 'journal': 'Artificial Intelligence,', 'volume': '70,', 'number': None, 'pages': '335-345', 'book_title': None, 'date': '1994'}, {'author': 'A. D. Kallis and D. Klappholz,', 'title': 'Reaching definitions analysis on code containing array references,', 'journal': None, 'volume': None, 'number': None, 'book_title': 'Conf. Rec. of the 4th Workshop on Languages and Compilers for Parallel Computing,', 'date': '1991'}, {'author': 'R. Fletcher.', 'title': 'Practical Methods of Optimization.', 'journal': None, 'volume': None, 'number': None, 'book_title': None, 'publisher': 'John Wiley &amp; Sons,', 'date': '1987'}, {'author': 'Clark, K. L.', 'title': 'Negation as Failure,', 'journal': None, 'volume': None, 'number': None, 'editor': 'in: H. Gallaire and J. Minker (eds.),', 'book_title': 'Logic and Data Bases,', 'publiser': 'Plenum Press,', 'date': '1978'}, {'author': 'Gent, I. P., &amp; Walsh, T.', 'title': 'Easy problems are sometimes hard.', 'journal': 'Artificial Intelligence,', 'volume': '70,', 'number': None, 'pages': '335-345', 'book_title': None, 'date': '1994'}, {'author': 'A. D. Kallis and D. Klappholz,', 'title': 'Reaching definitions analysis on code containing array references,', 'journal': None, 'volume': None, 'number': None, 'book_title': 'Conf. Rec. of the 4th Workshop on Languages and Compilers for Parallel Computing,', 'date': '1991'}, {'author': 'R. Fletcher.', 'title': 'Practical Methods of Optimization.', 'journal': None, 'volume': None, 'number': None, 'book_title': None, 'publisher': 'John Wiley &amp; Sons,', 'date': '1987'}, {'author': 'Clark, K. L.', 'title': 'Negation as Failure,', 'journal': None, 'volume': None, 'number': None, 'editor': 'in: H. Gallaire and J. Minker (eds.),', 'book_title': 'Logic and Data Bases,', 'publiser': 'Plenum Press,', 'date': '1978'}, {'author': 'Gent, I. P., &amp; Walsh, T.', 'title': 'Easy problems are sometimes hard.', 'journal': 'Artificial Intelligence,', 'volume': '70.', 'number': None, 'pages': '335-345', 'book_title': None, 'date': '1994'}, {'author': 'A. D. Kallis and D. Klappholz,', 'title': 'Reaching definitions analysis on code containing array references,', 'journal': None, 'volume': None, 'number': None, 'book_title': 'Conf. Rec. of the 4th Workshop on Languages and Compilers for Parallel Computing,', 'date': '1991'}, {'author': 'R. Fletcher.', 'title': 'Practical Methods of Optimization.', 'journal': None, 'volume': None, 'number': None, 'book_title': None, 'publisher': 'John Wiley &amp; Sons,', 'date': '1987'}, {'author': 'Clark, K. L.', 'title': 'Negation as Failure,', 'journal': None, 'volume': None, 'number': None, 'editor': 'in: H. Gallaire and J. Minker (eds.),', 'book_title': 'Logic and Data Bases,', 'publiser': 'Plenum Press,', 'date': '1978'}, {'author': 'Gent, I. P., &amp; Walsh, T.', 'title': 'Easy problems are sometimes hard.', 'journal': 'Artificial Intelligence,', 'volume': '70.', 'number': None, 'pages': '(335-345),', 'book_title': None, 'date': '1994'}]\n"
+      "[{'author': 'T. Fahringer, R. Blasko, and H. Zima.', 'title': 'Automatic performance prediction to support parallelization of Fortran programs for massively parallel systems.', 'journal': None, 'volume': None, 'number': None, 'book_title': 'In Proceedings of the 1992 ACM International Conference on Supercomputing,', 'date': '1992'}, {'author': 'A. D. Kallis and D. Klappholz,', 'title': 'Reaching definitions analysis on code containing array references,', 'journal': None, 'volume': None, 'number': None, 'book_title': 'Conf. Rec. of the 4th Workshop on Languages and Compilers for Parallel Computing,', 'date': '1991'}, {'author': 'R. Fletcher.', 'title': 'Practical Methods of Optimization.', 'journal': None, 'volume': None, 'number': None, 'book_title': None, 'publisher': 'John Wiley &amp; Sons,', 'date': '1987'}, {'author': 'Clark, K. L.', 'title': 'Negation as Failure,', 'journal': None, 'volume': None, 'number': None, 'editor': 'in: H. Gallaire and J. Minker (eds.),', 'book_title': 'Logic and Data Bases,', 'publiser': 'Plenum Press,', 'date': '1978'}, {'author': 'Gent, I. P., &amp; Walsh, T.', 'title': 'Easy problems are sometimes hard.', 'journal': 'Artificial Intelligence,', 'volume': '70', 'number': None, 'pages': '(335-345),', 'book_title': None, 'date': '1994'}]\n"
      ]
     }
    ],
@@ -113,7 +113,7 @@
     "citation={'author':\"Gent, I. P., &amp; Walsh, T.\",\n",
     "               'title':\"Easy problems are sometimes hard.\",\n",
     "               'journal':\"Artificial Intelligence,\",\n",
-    "               'volume': '70.',\n",
+    "               'volume': '70',\n",
     "               'number': None,\n",
     "               'pages':\"(335-345),\",\n",
     "               'book_title':None,\n",
@@ -124,14 +124,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "T. Fahringer, R. Blasko, and H. Zima.Automatic performance prediction to support parallelization of Fortran programs for massively parallel systems.In Proceedings of the 1992 ACM International Conference on Supercomputing,1992\n"
+      "Gent, I. P., &amp; Walsh, T.Easy problems are sometimes hard.Artificial Intelligence,70(335-345),1994\n"
      ]
     }
    ],
@@ -192,7 +192,7 @@
     "            output= output + self.date\n",
     "        print(output)\n",
     "        \n",
-    "c=XML(citations[0])\n",
+    "c=XML(citations[4])\n",
     "c.complete()"
    ]
   },
