--- a/homework/Assignment 4.ipynb
+++ b/homework/Assignment 4.ipynb
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -39,7 +39,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
@@ -51,16 +51,35 @@
     }
    ],
    "source": [
-    "words = \"If you do much work on computers, eventually you find that there’s some task you’d like to automate. For example, you may wish to perform a search-and-replace over a large number of text files, or rename and rearrange a bunch of photo files in a complicated way.\".split()\n",
+    "words = \"If you do much work on computers, eventually you find that there's some task you'd like to automate. For example, you may wish to perform a search-and-replace, over a large number of text files or rename and rearrange a bunch of photo files in a complicated way.\".split()\n",
     "print(words)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 49,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[False, False, False, False, False, False, False, True, False, False, True, False, False, True, False, False, False, True, False, True, False, True, False, False, False, True, True, False, True, True, False, False, False, False, False, True, True, True, True, False, False, False, False, False, True, True, True]\n"
+     ]
+    }
+   ],
+   "source": [
+    "def words_containing_a(words):\n",
+    "    output = []\n",
+    "    for x in words:\n",
+    "        if \"a\" in x:\n",
+    "            output.append(True)\n",
+    "        else:\n",
+    "            output.append(False)\n",
+    "    return output\n",
+    "words_having_a = words_containing_a(words)\n",
+    "print(words_having_a)\n"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -73,7 +92,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 90,
    "metadata": {},
    "outputs": [
     {
@@ -82,7 +101,7 @@
        "6"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 90,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -93,7 +112,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 91,
    "metadata": {},
    "outputs": [
     {
@@ -110,6 +129,44 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 128,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[2, 3, 10, 8, 2, 9, 2, 6, 2, 2, 9, 3, 7, 4, 2, 3, 8, 2, 9, 2, 3, 2, 4, 10, 9, 3, 9, 3, 7, 2, 3, 10, 9, 2, 9]\n"
+     ]
+    }
+   ],
+   "source": [
+    "lengths = []\n",
+    "for word in words:\n",
+    "    lengths.append(len(word))\n",
+    "print(lengths)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 130,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[2, 3, 5, 5, 2, 5, 2, 5, 2, 2, 5, 3, 5, 4, 2, 3, 5, 2, 5, 2, 3, 2, 4, 5, 5, 3, 5, 3, 5, 2, 3, 5, 5, 2, 5]\n"
+     ]
+    }
+   ],
+   "source": [
+    "Lengths2=[min(len(word),5) for word in words]\n",
+    "print(Lengths2)"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -118,24 +175,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 173,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def first_letters_except2(words, stopwords):\n",
-    "    pass"
+    "\n",
+    "def first_letters_except2(words,stopwrds):\n",
+    "    output=[]\n",
+    "    for word in words:\n",
+    "        if word in stopwords:\n",
+    "            continue\n",
+    "        else:\n",
+    "            output.append(word[0])\n",
+    "    return output"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 174,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "None\n"
+      "['A', 'p', 'p', 's', 'p', 'F', 'p', 'm', 'p', 's']\n"
      ]
     }
    ],
