--- a/homework/Assignment 5.ipynb
+++ b/homework/Assignment 5.ipynb
@@ -19,7 +19,9 @@
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "I have multiple files that need to be mereged. I might need to create new derived fields. The data that I want to work with have both the aggregate and separated by attribute parts. First I want to develop a step where I can connect the separatly registered data into the general aggregatte in order to look for a trend or a pattern that I can work with."
+   ]
   },
   {
    "cell_type": "markdown",
@@ -30,9 +32,46 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "\t\t\t\t\t\t\t\t\t\t\t\t\t\t\t\t\t\t\t\n",
+    "\t\t\t ---Retention ---\t\t\t --- within four years ---\t\t --- in fith year\t\t --- in sixth year ---\t\t --- in seventh year ---\t\t --- in eighth year ---\t\t --- in ninth year ---\t\t --- in tenth year ---\t\n",
+    "Fall= int (year)\t\n",
+    "Head count+ int\n",
+    "SAT average= int\n",
+    "---Retention ---\n",
+    "After one year= int\t\n",
+    "After two years= int\t\n",
+    "After three years= int\n",
+    " --- Graduation and Continuation ---\n",
+    " --- within four years\n",
+    "Graduated= int\n",
+    "Continued= int\t\n",
+    " --- in fith year---\n",
+    " Graduated= int\n",
+    "Continued= int\n",
+    "--- in sixth year ---\n",
+    "Graduated= int\n",
+    "Continued= int\n",
+    "\n",
+    "-- in seventh year ---\n",
+    "Graduated= int\n",
+    "Continued= int\n",
+    "\n",
+    " --- in eighth year ---\n",
+    " Graduated= int\n",
+    "Continued= int\n",
+    " \n",
+    " ---in ninth year ---\n",
+    " Graduated= int\n",
+    "Continued= int\n",
+    " \n",
+    " --- in tenth year ---\n",
+    " Graduated= int\n",
+    "Continued= int\n"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -44,7 +83,11 @@
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "1) I want to produce a graphic flow representation of the trend of Students progress from freshman to senior year whenever applicable.\n",
+    "2) Through the manipulation of this data, I would like to investigate if there is a pattern in the students progress based on their background. \n",
+    "3) Is there a similar pattern in the progressive years that is related to students of a certain group. Is it a year special event or it is a consistency?  "
+   ]
   },
   {
    "cell_type": "markdown",
@@ -55,7 +98,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -64,7 +107,7 @@
        "'1.2.0'"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 1,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -76,20 +119,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "'2.6.2'"
-      ]
-     },
-     "execution_count": 4,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "import openpyxl\n",
     "openpyxl.__version__"
